fix(zoom.js): fix overlay in dark mode

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -186,3 +186,8 @@ a[href^="tel\:"]::before {
 a[href^="sms\:"]::before {
   content: "";
 }
+
+// fix zoom.js overlay in dark mode
+.zoom-overlay {
+  background: var(--background-body);
+}
